--- a/src/assets/styles/templatesStyles/Ecommerce/ProjectCustomizationForm.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/ProjectCustomizationForm.scss
@@ -132,7 +132,11 @@
           border: none;
           cursor: pointer;
           box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
+          &:disabled {
+            background-color: red;
+          }
         }
+        
         .save {
           background-color: #ffffff;
           color: #007bff;
