--- a/src/assets/styles/templatesStyles/Ecommerce/AddToCart.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/AddToCart.scss
@@ -10,4 +10,11 @@
     font-size: 20px;
     font-family: var(--body-font);
     cursor: pointer;
+    border: 1px solid transparent;
+    position: relative;
+    z-index: 0;
+    &:hover {
+        border: 1px solid var(--body-font-color);
+        color: var(--body-font-color);
+    }
 }
