--- a/src/assets/styles/dashboardStyles/ProjectPage.scss
+++ b/src/assets/styles/dashboardStyles/ProjectPage.scss
@@ -55,3 +55,39 @@
 .router-link{
     text-decoration: none;
 }
+
+.project-display {
+    width: 200px;
+    height: 200px;
+    border-radius: 4px;
+    transition: all 500ms;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.7;
+    padding: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover {
+        opacity: 1;
+    }
+}
+
+.project-words {
+    width: 100%;
+    height: 100px;
+    background-color: #fff;
+    border-radius: 4px;
+    color: #222222;
+    padding: 4px;
+    border: 2px solid #00284C;
+    box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
+}
+
+.display-projects {
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    gap: 20px;
+}
