--- a/src/assets/styles/templatesStyles/Ecommerce/CustomizationModal.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/CustomizationModal.scss
@@ -2,8 +2,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
@@ -14,7 +14,7 @@
     background-color: #fff;
     padding: 20px;
     border-radius: 4px;
-    width: 45%;
+    width: 650px;
     height: 80%;
     opacity: 0.95;
     position: relative;
@@ -23,18 +23,23 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
   
 .close-button {
-    margin-top: 10px;
     width: 100%;
+    height: 5%;
     cursor: pointer;
-    border: 1px solid #007bff;
+    border: none;
+    color: white;
+    border-radius: 4px;
+    background-color: #ff0033;
+    font-size: 15px;
+    letter-spacing: 1px;
+    opacity: 0.5;
     box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
     &:hover {
-        background-color: #007bff;
-        border: 1px solid transparent;
-        color: white;
+        opacity: 1;
     }
 }
   
