--- a/src/assets/styles/templatesStyles/Ecommerce/CustomizedMain.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/CustomizedMain.scss
@@ -61,12 +61,12 @@
                     gap: 24px;
                     flex-direction: column;
                     font-family: var(--body-font);
-                    position: relative;
-                    z-index: 1;
-                    // .image {
-                    //     width: 250px;
-                    //     height: 50%;
-                    // }
+                    .link {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        flex-direction: column;
+                    }
                     .price {
                         font-weight: 700;
                         font-size: var(--body-font-size);
