product description completed

--- a/src/assets/styles/templatesStyles/Ecommerce/Navbar.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Navbar.scss
@@ -34,6 +34,23 @@
         line-height: 23px;
         cursor: pointer;
     }
+    .cart-link {
+        position: relative;
+        .cart-indicator {
+            position: absolute;
+            top: -8px;
+            right: -8px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 20px;
+            height: 20px;
+            background-color: red;
+            color: white;
+            font-size: 12px;
+            border-radius: 50%;
+        }
+    }
     .login-signup-buttons {
         display: flex;
         align-items: center;
