--- a/src/assets/styles/custDashboardStyles/CustDashboardPage.scss
+++ b/src/assets/styles/custDashboardStyles/CustDashboardPage.scss
@@ -60,3 +60,19 @@
     color: black;
     margin-left: 2rem;
 }
+
+.store-display {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    row-gap: 30px;
+}
+
+.store-object {
+    width: 200px;
+    height: 200px;
+    background-color: red;
+}
