--- a/src/assets/styles/templatesStyles/Ecommerce/Header.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Header.scss
@@ -13,8 +13,13 @@
         .menu-item {
             list-style-type: none;
             font-size: 20px;
+            padding: 0 6px;
+            border-left: 2px solid var(--primary-color);
             font-family: var(--body-font);
             color: var(--primary-color);
+            &:hover {
+                border-bottom: 2px solid var(--primary-color);
+            }
         }
     }
 }
