--- a/src/assets/styles/templatesStyles/Finance/Footer.scss
+++ b/src/assets/styles/templatesStyles/Finance/Footer.scss
@@ -6,16 +6,19 @@
     gap: 24vw;
     height: 13rem;
     color: #FFFFFF;
+    padding-left: 40px;
+    padding-right: 20px;
+    margin-top: 100px;
     background-color: #222222;
     .footer-logo{
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 52px;
+        font-size: 30px;
         font-family: 'roboto';
-        font-weight: 800;
-        width: 8.5rem;
-        height: 8.5rem;
+        font-weight: 700;
+        width: auto;
+        height: auto;
     }
     .social-media-span{
         display: flex;
@@ -26,12 +29,15 @@
     .contact-span{
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
+        align-items: center;
+        justify-content: space-evenly;
         gap: 0.5rem;
+        width: 193px;
         p{
-            margin: 0;
+            margin: auto;
             font-size: 18px;
             font-weight: 300;
+            text-align: center;
         }
     }
     
