--- a/src/assets/styles/authenticationStyles/AuthLoader.scss
+++ b/src/assets/styles/authenticationStyles/AuthLoader.scss
@@ -20,7 +20,7 @@
     left: 37px;
     width: 6px;
     height: 18px;
-    border-radius: 20%;
+    border-radius: 4px;
     background: #0085FF;
 }
   
