--- a/src/assets/styles/templatesStyles/Ecommerce/Cart.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Cart.scss
@@ -178,7 +178,7 @@ h2, p {
             color: var(--secondary-color);
             border: none;
             outline: none;
-            border-radius: 0px 10px 10px 0px;
+            border-radius: 4px;
             cursor: pointer;
             display: flex;
             justify-content: center;
