--- a/src/assets/styles/templatesStyles/TemplatesPreview.scss
+++ b/src/assets/styles/templatesStyles/TemplatesPreview.scss
@@ -65,7 +65,7 @@
     left: 72vw;
     z-index: 100;
     background-color: #00284C;
-    border-radius: 0;
+    border-radius: 4px;
     color: #FFFFFF;
     font-weight: 600;
     font-size: 20px;
