--- a/src/assets/styles/templatesStyles/Ecommerce/ProjectCustomizationForm.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/ProjectCustomizationForm.scss
@@ -14,7 +14,7 @@
     //   content: "";
     //   height: 16px;
     //   width: 16px;
-    //   border-radius: 50%;
+    //   border-radius: 4px;
     //   left: 0;
     //   background-color: royalblue;
     // }
