--- a/src/assets/styles/templatesStyles/Ecommerce/Checkout.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Checkout.scss
@@ -2,7 +2,7 @@ p {
     margin: 0%;
 }
 .checkout-container {
-    width: 80%;
+    width: 700px;
     min-height: 80%;
     margin: 3% auto;
     display: flex;
