--- a/src/assets/styles/templatesStyles/Ecommerce/ProductDescription.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/ProductDescription.scss
@@ -1,6 +1,5 @@
 .container {
-    width: 80%;
-    margin: 3% auto;
+    width: 700px;
     display: flex;
     flex-direction: column;
     .product {
