--- a/src/assets/styles/templatesStyles/Ecommerce/Search.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Search.scss
@@ -29,6 +29,9 @@
     button {
         cursor: pointer;
         border: none;
+        display: flex;
+        height: 50%;
+        padding-left: 15px;
         background-color: inherit;
         color: #ACACAC;
         border-left: 0.74px solid #15616B;
