--- a/src/assets/styles/templatesStyles/Ecommerce/Cart.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Cart.scss
@@ -38,7 +38,7 @@ h2, p {
             flex-direction: column;
             justify-content: center;
             gap: 10%;
-            //align-items: center;
+            align-items: center;
             text-align: left;
             .cart-product-name {
                 font-style: normal;
@@ -145,10 +145,18 @@ h2, p {
             .remove {
                 background-color: var(--secondary-color);
                 color: var(--primary-color);
+                &:hover {
+                    background-color: var(--primary-color);
+                    color: var(--secondary-color);
+                }
             }
             .buy {
                 background-color: var(--primary-color);
                 color: var(--secondary-color);
+                &:hover {
+                    background-color: var(--secondary-color);
+                    color: var(--primary-color);
+                }
             }
         }
     }
@@ -183,6 +191,10 @@ h2, p {
             display: flex;
             justify-content: center;
             align-items: center;
+            &:hover {
+                background-color: var(--secondary-color);
+                color: var(--primary-color);
+            }
         }
     }
 }
