--- a/src/assets/styles/templatesStyles/Ecommerce/Checkout.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Checkout.scss
@@ -47,9 +47,9 @@ p {
             .name-and-number {
                 display: flex;
                 max-width: 100%;
-                
-                justify-content: space-between;
+                //justify-content: space-between;
                 align-items: center;
+                gap: 50%;
             }
             .address p {
                 margin: 0%;
@@ -65,11 +65,15 @@ p {
                 width: 100%;
                 height: 40px;
                 border-radius: 10px;
-                background-color: #15616B;
+                background-color: var(--primary-color);
                 border: none;
                 outline: none;
-                color: #FFFFFF;
+                color: var(--secondary-color);
                 cursor: pointer;
+                &:hover {
+                    background-color: var(--secondary-color);
+                    color: var(--primary-color);
+                }
             }
         }
     }
@@ -80,6 +84,9 @@ p {
         justify-content: space-between;
         align-items: center;
         height: 200px;
+        width: 110%;
+        position: relative;
+        left: -5%;
         .cart-product-image {
             //height: 100%;
             position: relative;
@@ -87,7 +94,7 @@ p {
         }
         .cart-product-info {
             height: 100%;
-            width: 23%;
+            width: 20%;
             padding: 0 3%;
             background: #FFFFFF;
             box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
@@ -96,7 +103,7 @@ p {
             flex-direction: column;
             justify-content: center;
             gap: 10%;
-            //align-items: center;
+            align-items: center;
             text-align: left;
             .cart-product-name {
                 font-style: normal;
