--- a/src/assets/styles/templatesStyles/Ecommerce/PaymentSteps.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/PaymentSteps.scss
@@ -1,15 +1,17 @@
 .payment-steps-div{
-    width: 80vw;
+    width: 90vw;
     height: 18vh;
     display: flex;
     margin-top: 3rem;
     justify-content: center;
+    align-self: center;
     gap: 8rem;
     align-items: center;
-    background: #FFFFFF;
+    background-color: #FFFFFF;
     box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     .step{
+        position: relative;
         text-align: center;
         p{
             font-size: 24px;
@@ -17,6 +19,7 @@
             font-weight: 800;
             color: #9EB1C3;
         }
+
         .step-circle{
             display: flex;
             justify-content: center;
@@ -28,8 +31,40 @@
             width: 5rem;
             text-align: center;
             height: 5rem;
-            background: #9EB1C3;
+            background-color: #9EB1C3;
             border-radius: 50%;
+        }
+        .step1-bar{
+            position: absolute;
+            left: 6rem;
+            top: 2.5rem;
+            width: 4rem;
+            height: 0.5vh;
+            background-color: #D9D9D9;
+        }
+        .step2-barA{
+            position: absolute;
+            right: 6rem;
+            top: 2.5rem;
+            width: 4rem;
+            height: 0.5vh;
+            background-color: #D9D9D9;
+        }
+        .step2-barB{
+            position: absolute;
+            left: 6rem;
+            top: 2.5rem;
+            width: 4rem;
+            height: 0.5vh;
+            background-color: #D9D9D9;
+        }
+        .step3-bar{
+            position: absolute;
+            right: 6rem;
+            top: 2.5rem;
+            width: 4rem;
+            height: 0.5vh;
+            background-color: #D9D9D9;
         }
     }
     
