--- a/src/assets/styles/templatesStyles/Ecommerce/Main.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Main.scss
@@ -76,6 +76,24 @@
                         position: relative;
                         top: -15%;
                     }
+                    .addToCart{
+                        width: 206px;
+                        height: 40px;
+                        background: var(--primary-color);
+                        color: var(--secondary-color);
+                        border-radius: 4px;
+                        outline: none;
+                        border: none;
+                        font-weight: 600;
+                        font-size: 20px;
+                        font-family: var(--body-font);
+                        cursor: pointer;
+                        border: 1px solid transparent;
+                        &:hover {
+                            border: 1px solid var(--body-font-color);
+                            color: var(--body-font-color);
+                        }
+                    }
                 }
             }
         }
