--- a/src/assets/styles/templatesStyles/Ecommerce/ProductDescription.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/ProductDescription.scss
@@ -2,6 +2,8 @@
     width: 700px;
     display: flex;
     flex-direction: column;
+    margin: auto;
+    margin-top: 60px;
     .product {
         display: flex;
         width: 100%;
