--- a/src/assets/styles/templatesStyles/Ecommerce/Cart.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Cart.scss
@@ -2,11 +2,100 @@ h2, p {
     margin: 0%;
 }
 .container {
-    width: 700px;
+    width: 740px;
     display: flex;
     flex-direction: column;
     font-family: var(--body-font);
     color: var(--body-font-color);
+    margin: auto;
+    margin-top: 60px;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    margin-top: 40px;
+    padding: 20px;
+    border: 3px double lightgray;
+    background: white;
+    border-radius: 4px;
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    
+.cart-div-one {
+    display: flex;
+    flex: 2 1 0%;
+    flex-flow: row;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+.cart-div-two {
+    flex: 1 1 0%;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    flex-flow: column;
+}
+
+.cart-image-div {
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 150px;
+    height: 150px;
+    transition: all 300ms ease 0s;
+}
+
+.cart-product-detail {
+    padding: 20px;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
+}
+.product-name {
+    letter-spacing: 0.5px;
+    margin: 10px 0px;
+    font-weight: 400;
+}
+
+.product-seller {
+    font-size: 13px;
+    margin: 3px 0px;
+    font-weight: 100;
+}
+
+.stock-available {
+    font-size: 13px;
+    margin: 3px 0px;
+    font-weight: 100;
+}
+
+.math-calc {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-bottom: 25px;
+}
+
+.product-value {
+    font-weight: 200;
+    font-size: 20px;
+    font-family: Georgia;
+}
+
+.math-space {
+    font-size: 15px;
+    max-width: 41px;
+    margin: 5px;
+    padding: 2px;
+    border-radius: 3px;
+    border: 1px solid gold;
+    text-align: center;
+}
     .container-header {
         font-family: var(--body-font);
         font-size: 32px;
@@ -15,12 +104,13 @@ h2, p {
         font-weight: 700;
     }
     .cart-info {
-        box-sizing: border-box;
-        margin: 5% 0;
         display: flex;
+        flex-wrap: wrap;
+        -webkit-box-pack: justify;
         justify-content: space-between;
-        align-items: center;
-        height: 200px;
+        border-bottom: 1px solid rgb(238, 238, 238);
+        margin-bottom: 10px;
+        transition: all 300ms ease 0s;
         .cart-product-image {
             //height: 100%;
             position: relative;
