--- a/src/assets/styles/templatesStyles/Ecommerce/Checkout.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Checkout.scss
@@ -1,6 +1,46 @@
 p {
     margin: 0%;
 }
+
+.checkout {
+    width: 700px;
+    display: flex;
+    height: 49px;
+    margin: 100px auto;
+    .checkout-amount, .checkout-button {
+        font-weight: 700;
+        // font-size: 32px;
+        line-height: 24px;
+    }
+    .checkout-amount{
+        width: 65%;
+        background-color: #FFFFFF;
+        box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
+        border-radius: 4px 0 0 4px;
+        display: flex;
+        align-items: center;
+        box-sizing: border-box;
+        padding-left: 3%;
+        
+    }
+    .checkout-button {
+        width: 35%;
+        background-color: var(--primary-color);
+        color: var(--secondary-color);
+        border: none;
+        outline: none;
+        border-radius: 0 4px 4px 0;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        transition: all 300ms;
+        align-items: center;
+        &:hover {
+            background-color: rgb(241, 111, 111);
+            // color: var(--primary-color);
+        }
+    }
+}
 .checkout-container {
     width: 700px;
     min-height: 80%;
