--- a/src/assets/styles/templatesStyles/Ecommerce/Cart.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Cart.scss
@@ -291,6 +291,7 @@ h2, p {
             align-items: center;
             box-sizing: border-box;
             padding-left: 3%;
+            font-size: 22px;
             
         }
         .checkout-button {
