--- a/src/assets/styles/custDashboardStyles/CustDashboardPage.scss
+++ b/src/assets/styles/custDashboardStyles/CustDashboardPage.scss
@@ -69,10 +69,57 @@
     flex-wrap: wrap;
     column-gap: 30px;
     row-gap: 30px;
+    align-items: center;
+    justify-content: center;
+    overflow: auto;
+    padding-top: 40px;
 }
 
 .store-object {
     width: 200px;
     height: 200px;
-    background-color: red;
+    /* background-color: red; */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 0 25px 0 25px;
+    transition: all 300ms;
+    position: relative;
+    &:hover {
+        transform: scale(1.05);
+    }
+    .visit-store {
+        position: absolute;
+        top: -4px;
+        left: -4px;
+        padding: 4px;
+        border-radius: 4px;
+        background-color: #fff;
+        border-top: 2px solid gold;
+        border-left: 2px solid gold;
+        &:hover {
+            background-color: gold;
+            border-top: 4px solid black;
+            border-left: 4px solid black;
+
+        }
+    };
+    .object-details {
+        position: absolute;
+        bottom: 2px;
+        left:2px;
+        width: 99%;
+        height: 60px;
+        padding-left: 4px;
+        background-color: #fff;
+        border-radius: 0 0 0 25px;
+        display: flex;
+        flex-flow: column;
+        align-items: start;
+        opacity: 0.8;
+        justify-content: space-evenly;
+        & p {
+            font-size: 14px;
+        }
+    }
 }
