--- a/src/assets/styles/templatesStyles/Ecommerce/CustomizedMain.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/CustomizedMain.scss
@@ -22,7 +22,6 @@
             display: flex;
             flex-direction: column;
             width: 100%;
-            //background-color: aqua;
             .section {
                 display: flex;
                 justify-content: center;
@@ -34,12 +33,12 @@
                 .section-name {
                     font-family: var(--name-font);
                     font-weight: 700;
-                    font-size: 30px;
+                    font-size: var(--other-font-size);
                 }
                 .more {
                     font-family: var(--body-font);
-                    font-weight: 200;
-                    font-size: 13px;
+                    font-weight: 500;
+                    font-size: var(--body-font-size);
                     display: none;
                 }
             }
@@ -60,31 +59,68 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    gap: 24px;
                     flex-direction: column;
                     font-family: var(--body-font);
+                    box-sizing: border-box;
                     .link {
                         display: flex;
                         justify-content: center;
                         align-items: center;
                         flex-direction: column;
-                    }
-                    .price {
-                        font-weight: 700;
-                        font-size: var(--body-font-size);
-                        color: var(--body-font-color);
-                    }
-                    .available {
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        flex-direction: column;
-                        .number-available {
-                            font-size: 16px;
+                        width: 100%;
+                        height: 70%;
+                        gap: 5%;
+                        .image {
+                            width: 90%;
+                            height: 50%;
+                            display: flex;
+                            justify-content: center;
+                            background-size: cover;
+                            .item-image{
+                                height: 100%;
+                                width: 100%;
+                            }
+                        }
+                        .item-name {
+                            font-size: 20px;
                             color: var(--body-font-color);
-                            margin: 0%;
-                            position: relative;
-                            top: -15%;
+                        }
+                        .price {
+                            font-weight: 700;
+                            font-size: var(--body-font-size);
+                            color: var(--body-font-color);
+                        }
+                        .available {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            flex-direction: column;
+                            .number-available {
+                                font-size: 16px;
+                                color: var(--body-font-color);
+                                margin: 0%;
+                                position: relative;
+                                top: -15%;
+                            }
+                        }
+                    }
+                    
+                    .addToCart {
+                        width: 206px;
+                        height: 40px;
+                        background: var(--primary-color);
+                        color: var(--secondary-color);
+                        border-radius: 4px;
+                        outline: none;
+                        border: none;
+                        font-weight: 600;
+                        font-size: 20px;
+                        font-family: var(--body-font);
+                        cursor: pointer;
+                        border: 1px solid transparent;
+                        &:hover {
+                            border: 1px solid var(--body-font-color);
+                            color: var(--body-font-color);
                         }
                     }
                 }
