--- a/src/assets/styles/templatesStyles/Finance/Finance.scss
+++ b/src/assets/styles/templatesStyles/Finance/Finance.scss
@@ -107,9 +107,12 @@ $heroImage: url('../../../images/farmers.png');
         height: 38rem;
         .finance-hero-section-header{
             margin: 0;
+            font-size: 30px;
+            font-weight: 700;
         }
         .finance-hero-section-text{
             font-weight: 400;
+            font-size: 18px;
             width: 27rem;
             margin-top: 0.5rem;
         }
@@ -145,6 +148,8 @@ $heroImage: url('../../../images/farmers.png');
         border-radius: 50%;
         font-size: 15px;
         font-family: 'roboto';
+        color: #222222;
+        background-color: #FFFFFF;
         font-weight: 500;
         box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
         .text{
