--- a/src/assets/styles/templatesStyles/Finance/FinanceEditForm.scss
+++ b/src/assets/styles/templatesStyles/Finance/FinanceEditForm.scss
@@ -23,6 +23,30 @@
                 background-color: blue;
             }
         }
+        .save-button{
+            cursor: pointer;
+            width: 10rem;
+            height: 3rem;
+            border-radius: 5px;
+            border: none;
+            background-color:rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
+            &:focus{
+                background-color: blue;
+            }
+        }
+        .publish-button{
+            cursor: pointer;
+            width: 10rem;
+            height: 3rem;
+            border-radius: 5px;
+            border: none;
+            background-color:rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
+            &:focus{
+                background-color: blue;
+            }
+        }
 
     }
     
