--- a/src/assets/styles/templatesStyles/Finance/Section3EditForm.scss
+++ b/src/assets/styles/templatesStyles/Finance/Section3EditForm.scss
@@ -1,5 +1,32 @@
-
-.section1-form{
+.section3-form{
+    overflow-x: scroll;
+    padding: 0;
+    border-radius: 15px;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border: none;
+    background-color: white;
+    top: 15vh;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40vw;
+    height: 70vh;
+    box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
+    h4{
+        font-size: 20px;
+        justify-self: center;
+        width: 12rem;
+        text-align: center;
+        outline: 1px solid black;
+    }
+    .label-input-span{
+        display: flex;
+        gap: 1rem;
+    }
     .header-input-style{
         padding-left: 10px;
         border: none;
@@ -22,39 +49,18 @@
             outline: none;
         }
     }
-    border-radius: 15px;
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    border: none;
-    background-color: white;
-    top: 20vh;
-    justify-content: flex-start;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40vw;
-    height: 65vh;
-    box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
-    h4{
-        font-size: 20px;
-        width: 12rem;
-        text-align: center;
-        outline: 1px solid black;
-    }
     .label-input-span{
         display: flex;
         gap: 1rem;
+    }
+    .color-color-span{
+        display: flex;
+        gap: 3rem;
     }
     input[type="text"]{
         @extend .header-input-style
     }
     input[type="number"]{
         @extend .number-input-style
-    }
-    .font-color-span{
-        display: flex;
-        gap: 2rem;
     }
 }
