feat: implemented redux state for finance template and it's interactions between three section forms

--- a/src/assets/styles/templatesStyles/Finance/Finance.scss
+++ b/src/assets/styles/templatesStyles/Finance/Finance.scss
@@ -60,10 +60,11 @@ $heroImage: url('../../../images/farmers.png');
         .login-register-buttons{
             display: flex;
             height: 100%;
+            background-color: transparent;
             justify-content: space-between;
             gap: 5rem;
             button{
-                background-color: transparent;
+                background: transparent;
                 border: none;
                 cursor: pointer;
                 font-size: 18px;
