--- a/src/assets/styles/dashboardStyles/ProjectPage.scss
+++ b/src/assets/styles/dashboardStyles/ProjectPage.scss
@@ -57,8 +57,9 @@
 }
 
 .project-display {
-    width: 200px;
+    min-width: 200px;
     height: 200px;
+    margin: 2rem 0 0 2rem;
     border-radius: 4px;
     transition: all 500ms;
     background-size: cover;
