--- a/src/assets/styles/custDashboardStyles/CustDashboardPage.scss
+++ b/src/assets/styles/custDashboardStyles/CustDashboardPage.scss
@@ -82,7 +82,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 0 25px 0 25px;
+    border-radius: 4px;
     transition: all 300ms;
     position: relative;
     &:hover {
@@ -112,11 +112,11 @@
         height: 60px;
         padding-left: 4px;
         background-color: #fff;
-        border-radius: 0 0 0 25px;
+        border-radius: 4px;
         display: flex;
         flex-flow: column;
         align-items: start;
-        opacity: 0.8;
+        // opacity: 0.8;
         justify-content: space-evenly;
         & p {
             font-size: 14px;
