--- a/src/assets/styles/templatesStyles/Ecommerce/Header.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Header.scss
@@ -4,6 +4,10 @@
     align-items: center;
     gap: 10px;
     margin-right: 10px;
+    transition: all 300ms;
+    &:hover {
+        gap: 40px
+    }
 }
 
 .header-two {
@@ -11,7 +15,7 @@
     flex-flow: row;
     align-items: center;
     padding: 0 50px;
-    gap: 10px;
+    gap: 0px;
     .menu {
         display: flex;
         flex-flow: row;
@@ -36,11 +40,7 @@
     display: flex;
     justify-content: center;
     border-bottom: 1px solid var(--primary-color);
-    // background-color: rgba(var(--color), 0.8)
     align-items: center;
-    // ::before {
-        opacity: 0.5;
-    // }
     .menu {
         width: 80%;
         display: flex;
