--- a/src/assets/styles/templatesStyles/Finance/Footer.scss
+++ b/src/assets/styles/templatesStyles/Finance/Footer.scss
@@ -1,4 +1,5 @@
 .footer{
+    position: relative;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -19,6 +20,17 @@
         font-weight: 700;
         width: auto;
         height: auto;
+    }
+    .review-button{
+        position: absolute;
+        left: 30rem;
+        width: 8rem;
+        cursor: pointer;
+        height: 3rem;
+        background-color: transparent;
+        color: #FFFFFF;
+        border: 1px solid #FFFFFF;
+        border-radius: 15px;
     }
     .social-media-span{
         display: flex;
